[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
database = { version = "0.1.0", path = "../database" }
sea-orm = { version = "0.11.2", features = ["macros", "runtime-tokio", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
